--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "airaya",
+  "name": "Alraya",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/masked-view": "^0.1.7",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.0",
@@ -20,11 +22,14 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
     "react-native-snap-carousel": "^3.8.4",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.6",
     "react-navigation-drawer": "^2.4.4",
     "react-navigation-stack": "^2.0.16",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation-tabs": "^2.7.0",
+    "sync-storage": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
